# lumen-node

./: CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
app/: .gitignore  Makefile  README.md  ffigen.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: generated_bindings.dart  main.dart
app/lib/app/: app.dart
app/lib/app/theme/: app_theme.dart
app/lib/core/domain/: lumen_engine.dart
app/lib/core/presentation/widgets/: kinetic_button.dart
app/lib/core/providers/: lumen_provider.dart  lumen_provider.g.dart
app/lib/features/editor/data/: editor_state.dart  node_factory.dart
app/lib/features/editor/model/: connection_model.dart  node_model.dart
app/lib/features/editor/providers/: canvas_key_provider.dart  canvas_key_provider.g.dart  editor_provider.dart  (+2 more)
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp
bridge/include/: lumen_ffi.h
bridge/src/: lumen_ffi.cpp
core/: main.cpp
core/include/: Graph.hpp  Node.hpp  Pin.hpp
core/include/nodes/: AddNode.hpp  ColorNode.hpp  MasterNode.hpp  MultiplyNode.hpp  NormalNode.hpp  TextureNode.hpp  TimeNode.hpp  UVNode.hpp
core/include/renderer/: Renderer.hpp
core/include/renderer/opengl/: OpenGLRenderer.hpp
core/src/: Graph.cpp  Node.cpp
core/src/nodes/: AddNode.cpp  ColorNode.cpp  MasterNode.cpp  MultiplyNode.cpp  NormalNode.cpp  TextureNode.cpp  TimeNode.cpp  UVNode.cpp
core/src/renderer/opengl/: OpenGLRenderer.cpp
(+28 files in other folders)
